
syntax = "proto3";

option csharp_namespace = "GrpcServiceTranscoding";
import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service Tour {
	// Equipment
	rpc GetAvailableEquipment (EquipmentIds) returns (EquipmentsResponse) {
		option (google.api.http) = {
			get: "/api/tours/{id}/equipment/available"
		};
	}
	rpc GetAllEquipment (Page) returns (PagedEquipmentsResponse) {
		option (google.api.http) = {
			get: "/api/administration/equipment"
		};
	}
	rpc GetEquipment (EquipmentId) returns (EquipmentResponse) {
		option (google.api.http) = {
			get: "/api/administration/equipment/{id}"
		};
	}
	rpc CreateEquipment (EquipmentResponse) returns (EquipmentResponse) {
		option (google.api.http) = {
			post: "/api/administration/equipment"
			body: "*"
		};
	}
	rpc UpdateEquipment (UpdateEquipmentId) returns (EquipmentResponse) {
		option (google.api.http) = {
			put: "/api/administration/equipment{id}"
			body: "*"
		};
	}
	rpc DeleteEquipment (EquipmentId) returns (EquipmentResponse) {
		option (google.api.http) = {
			delete: "/api/administration/equipment/{id}"
		};
	}
	
	// Tour
	// PublishedTour
}
message EquipmentIds{
	string id = 1;
	repeated string equipmentIds = 2;
}
message Page{
	int32 page = 1;
	int32 pageSize = 2;
}
message EquipmentId{
	string id = 1;
}
message UpdateEquipmentId{
	EquipmentResponse equipment = 1;
	string id = 2;
}
message EquipmentResponse{
	optional string id = 1;
	string name = 2;
	optional string description = 3;
}
message EquipmentsResponse{
	repeated EquipmentResponse EquipmentResponse = 1;
}
message PagedEquipmentsResponse{
	repeated EquipmentResponse Results = 1;
	int32 TotalCounts = 2;
}
